# tile-lens-experiments

./: .gitmodules  README.md  pyproject.toml  run_triton_profiler.py
ablation_studies/profiler/: ablation_runner.py  run_profiler_ablation.sh  whitelist.txt
ablation_studies_profiler/: ablation_runner.py  analyze_profiler_timing.py  plot_profiler_ablation.py
accuracy/: README.md  analyzer.py  runner.py
case_studies/mask_percentage/quantize_kv_transform/: quantize_kv_transform_opt.py
case_studies/profiler/: README.md  calculate_stats.py  collect_proton_times.py  plot_profiler_speedup.py  test_correctness.py
case_studies/profiler/mask_percentage/attention_llama/: baseline.py  optimized.py
case_studies/profiler/mask_percentage/bgmv_expand_slice/: baseline.py  optimized.py
case_studies/profiler/mask_percentage/bgmv_shrink_kernel/: baseline.py  optimized.py
case_studies/profiler/mask_percentage/fifth_order_sph_harmonics/: baseline.py  optimized.py
case_studies/profiler/mask_percentage/lora_expand_gemv/: baseline.py  optimized.py
case_studies/profiler/mask_percentage/sin_kernel/: baseline.py  (+1 more)
case_studies/profiler/unroll_for_loop/: proton_times.csv
case_studies/unroll_for_loop/: README.md  collect_proton_times.py  test_all_unroll.py  test_correctness.py
case_studies/unroll_for_loop/diag_ssm_triton/: baseline.py
case_studies/unroll_for_loop/flash_decode2_phi/: optimized.py
case_studies/unroll_for_loop/matmul_triton1/: optimized.py
case_studies/unroll_for_loop/rmsnorm_fused/: optimized.py
case_studies/unroll_for_loop/triton_matmul/: optimized.py
(+14 files in other folders)
