[project]
name = "tile-lens-experiments"
version = "0.1.0"
description = "Experiment Scripts for TileLens"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llnl-hatchet",
    "numpy",
    "pandas",
    "torch == 2.9.1",
    "triton-viz",
]

[tool.uv.sources]
triton-viz = { path = "./submodules/triton-viz" }
